# symphony

./: .gitignore  README.md  RELEASE_NOTES.md  SPEC.md  WORKFLOW.md  issues.json  plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/brainstorming/: visual-companion.md
.github/skills/commit/: SKILL.md
.github/skills/daily-briefing/: SKILL.md  run.py  send_email.py
.github/skills/dispatching-parallel-agents/: SKILL.md
.github/skills/executing-plans/: SKILL.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  api.ts  types.ts  utils.ts
demo/: README.md  WORKFLOW.md  issues.json
demo/project/: calculator.py  test_calc.py
docs/docs/: AI Native - QA Transformation.md  token_accounting.md
docs/lessonlearned/: troubleshooting.md
docs/plans/: 2026-03-25-qa-agent-p1-quick-win.md  2026-03-28-qa-verification-skills-p1.md  2026-03-28-qa-verification-skills-p2.md  2026-03-28-qa-verification-skills-p3.md
docs/specs/: 2026-03-26-ai-native-sdlc-orchestrator-design.md  2026-03-27-qa-skills-plugins-hooks-design.md  2026-03-28-qa-skills-quick-win-design.md
elixir/: AGENTS.md  README.md  WORKFLOW.md
elixir/docs/: logging.md
src/symphony/: __init__.py  __main__.py  agent_runner.py  cli.py  config.py  log.py  metrics.py  models.py  orchestrator.py  prompt.py  server.py  watcher.py  workflow.py  workspace.py
tests/: test_config.py  test_metrics.py  test_orchestrator.py  test_prompt.py  test_server.py  test_tracker.py  test_watcher.py  test_workflow.py  test_workspace.py
(+180 files in other folders)
